# LegalDesk

./: README.md  SAAS_TASKS.md  SPEC.md  package-lock.json  package.json  tailwind.config.js
.git.bak/: COMMIT_EDITMSG  FETCH_HEAD
.git.bak/refs/remotes/origin/: main
docs/: PRODUCT.md  TECHNICAL.md  USER_MANUAL.md  迭代讨论记录.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: DocumentWizard.tsx
src/data/: templates.ts
src/pages/: CaseDetail.tsx  CaseList.tsx  Dashboard.tsx  TemplatePage.tsx
src/store/: index.ts
src/types/: index.ts
